<resources>
    <string name="app_name">复旦校园活动平台</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注册</string>
    <string name="invalid_username">用户名不合法</string>
    <string name="invalid_password">密码必须大于五个字符</string>
    <string name="invalid_confirm_password">确认密码必须和密码抑制</string>
    <string name="invalid_workNumber">学工号必须为6位十进制数字</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_work_number">学工号</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="go_to_register">没有账号？去注册</string>
    <string name="go_to_login">没有账号？去登录</string>
    <string name="title_activity_user">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_user">我的</string>
    <string name="done_project">已完成</string>
    <string name="all_project">所有活动</string>
    <string name="project_activity_title">活动界面</string>
    <string name="activity_details_title">项目详情</string>

    <string name="participate_activity_details_fragment">报名参加</string>
    
    
    
    <string name="activity_name">activity_name</string>
    <string name="activity_introduction">activity_introduction</string>
    <string name="activity_picture">activity_picture</string>
    <string name="activity_time">activity_time</string>
    <string name="activity_signup_time">activity_signup_time</string>

    <string name="activity_limit">activity_limit</string>
    <string name="activity_venue">activity_venue</string>
    <string name="activity_participate_num">participate_num</string>
    <string name="activity_sponsor">sponsor</string>
    <string name="activity_type">type</string>


</resources>