<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/transparentBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        android:layout_margin="32dp"
        android:elevation="16dp"
        android:id="@+id/card">

        <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/feedDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray">

                    <com.fudan.project.ui.home.BackgroundImageView
                        android:id="@+id/acPic"
                        style="@style/BigBlurryBackground"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/details_header_height"
                        />

                    <com.fudan.project.ui.home.BackgroundImageView
                        android:id="@+id/acCover"
                        android:layout_width="@dimen/thumbnail_length_details_view"
                        android:layout_height="@dimen/thumbnail_length_details_view"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:importantForAccessibility="no"
                        tools:src="@tools:sample/avatars"/>
                    <TextView
                        android:id="@+id/detailsTitle"
                        style="@style/details.TextView.Heading"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/acCover"
                        android:layout_toEndOf="@id/acCover"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:shadowColor="@color/black"
                        android:shadowRadius="3"
                        android:textColor="@color/white"
                        tools:text="Activity title"/>
                    <TextView
                        android:id="@+id/sponsor"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detailsTitle"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@id/acCover"
                        android:layout_toRightOf="@id/acCover"
                        android:ellipsize="end"
                        android:lines="1"
                        android:shadowColor="@color/black"
                        android:shadowRadius="3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small"
                        tools:text="@string/activity_sponsor" />
                </RelativeLayout>

                <Spinner
                    android:id="@+id/spinnerAlternateUrls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_micro"/>

                <Button
                    android:id="@+id/btnParticipateActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:focusable="false"
                    android:background="@color/allButton"
                    android:text="@string/participate_activity_details_fragment"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/detailsTitle"
                        android:text="活动简介 :"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                    ></TextView>
                    <TextView
                        android:id="@+id/acIntro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/detailsContent"
                        android:text="@string/activity_introduction"
                        >
                    </TextView>
                    <TextView
                        style="@style/detailsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="活动报名时间 :"></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_time"
                        style="@style/detailsContent"
                        android:id="@+id/acSignupTime">
                    </TextView>
                    <TextView
                        style="@style/detailsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="活动时间 :"></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_time"
                        style="@style/detailsContent"
                        android:id="@+id/acTime">
                    </TextView>

                    <TextView
                        style="@style/detailsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="活动地点 ："></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/acVenue"
                        style="@style/detailsContent"
                        android:text="@string/activity_venue"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="总人数 ："
                        style="@style/detailsTitle">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/acLimit"
                        style="@style/detailsContent"
                        android:text="@string/activity_limit">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="活动报名人数 ："
                        style="@style/detailsTitle">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/detailsContent"
                        android:id="@+id/acParticipate"
                        android:text="@string/activity_participate_num">
                    </TextView>
                </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </FrameLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>